# mcatCS

./: README.md
Build Grouped Spatial Index File/: Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  kdt3.pb.cc  main.cpp
Build Grouped Spatial Index File/.deps/: BuildIndex-main.Po
Build Grouped Spatial Index File/autom4te.cache/: output.1  requests  traces.0  traces.1
Build Grouped Spatial Index File/include/: kdt3.pb.h
Grouped Spatial Index File Generation/: GSIF_main.cpp  Match.depend  send.cpp
Min-conflict Data Layout Strategy/: min-conflict data layout.cpp
Query/: Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  main.cpp
Query/.deps/: Query-main.Po  main.Tpo
Query/autom4te.cache/: output.1  requests  traces.0  traces.1
Request/: main.cpp  makefile
